Shorten editable text box to prevent it overflowing

--- a/src/scripts/modules/media/header/header.less
+++ b/src/scripts/modules/media/header/header.less
@@ -20,7 +20,7 @@
 
     // When editing is turned on the Title becomes an input box; make sure it stretches
     input[type="text"] {
-      width: 700px;
+      width: 550px;
       text-overflow: ellipsis;
     }
 
